fix(FirstLoginModal): alignment (#467)

--- a/assets/css/components/_modals.scss
+++ b/assets/css/components/_modals.scss
@@ -404,6 +404,11 @@
   .rocket-text {
     padding-right: 3em;
     p { line-height: 1.5; }
+    img {
+      width: 30px;
+      margin: 0px auto;
+      margin-bottom: 1.25em;
+    }
   }
 }
 
